--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -906,7 +906,7 @@
   "wallet.send.confirmationDialog.amountLabel": "金額",
   "wallet.send.confirmationDialog.assetLabel": "トークン",
   "wallet.send.confirmationDialog.back": "戻る",
-  "wallet.send.confirmationDialog.feesLabel": "取引料金",
+  "wallet.send.confirmationDialog.feesLabel": "トランザクション手数料",
   "wallet.send.confirmationDialog.flightCandidateCheckboxLabel": "このトランザクションの一環として実際のADAが送金されること、またこのアクションは取消しできないことを理解しました。",
   "wallet.send.confirmationDialog.flightCandidateWarning": "<b>警告：</b>Daedalus Flight候補版はCardanoメインネットに接続されています。このトランザクションを確認すると、実際のADAがこのウォレットから送金されます。",
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "送金時パスワードを入力して下さい",
@@ -925,7 +925,7 @@
   "wallet.send.form.description.label": "詳細",
   "wallet.send.form.errors.invalidAmount": "有効な金額を入力してください。",
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
-  "wallet.send.form.estimatedFee.label": "推定料金",
+  "wallet.send.form.estimatedFee.label": "見積もり手数料",
   "wallet.send.form.minAdaRequired": "最低{minimumAda}ADAが必要です",
   "wallet.send.form.minAdaRequiredTooltip": "別のトークンを送金するためには、この受信者に最低{minimumAda}ADAを送金する必要があります。",
   "wallet.send.form.of.label": "/",
@@ -1106,7 +1106,7 @@
   "wallet.transaction.tokensReceived": "トークン入金",
   "wallet.transaction.tokensSent": "トークン送金",
   "wallet.transaction.transactionAmount": "トランザクション額",
-  "wallet.transaction.transactionFee": "取引料金",
+  "wallet.transaction.transactionFee": "トランザクション手数料",
   "wallet.transaction.transactionId": "トランザクションID",
   "wallet.transaction.transactionMetadata": "トランザクション Metadata",
   "wallet.transaction.transactionMetadataDescription": "トランザクション Metadata、不適切なコンテンツが含まれている可能性があります。モデレートされていないコンテンツを表示します。",
