[DDW-500] Improve remove button UX

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -9930,9 +9930,9 @@
           "line": 41
         },
         "file": "source/renderer/app/components/wallet/send-form/messages.js",
-        "id": "wallet.send.form.button.removeReceiver",
+        "id": "wallet.send.form.button.removeLabel",
         "start": {
-          "column": 29,
+          "column": 15,
           "line": 37
         }
       },
