--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -920,7 +920,7 @@
   "wallet.send.form.asset.label": "トークン",
   "wallet.send.form.button.addAssetButtonLabel": "+ トークンを追加する",
   "wallet.send.form.button.clearLabel": "取り消す",
-  "wallet.send.form.button.removeReceiver": "削除",
+  "wallet.send.form.button.removeLabel": "削除",
   "wallet.send.form.calculatingFeesLabel": "手数料を計算しています",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
   "wallet.send.form.description.label": "詳細",
